Fix arrow icon firefox issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ h1 {
 .qtn {
     display: flex;
     flex-direction: row;
-  
+    justify-content: space-between;
     cursor: pointer;
 }
 
@@ -112,12 +112,16 @@ h1 {
     color: hsl(14, 88%, 65%);
 }
 
+.qtn > p {
+    padding: 8px 0;
+}
+
 .qtn > img {
     /*object-fit:scale-down;
     object-position: 100% 50%;*/
     position: absolute;
-    margin-top: 1.5%;
-    right: 35%;
+    margin-top: 4%;
+    right: 15%;
 
 }
 
@@ -132,10 +136,6 @@ hr {
 .bold {
     font-weight: 700;
     color: black;
-}
-
-.qtn > p {
-    padding: 8px 0;
 }
 
 span {
@@ -216,11 +216,11 @@ span {
     }
 
     .qtn > img {
-        /*object-fit:scale-down;
-        object-position: 100% 50%;*/
         position: absolute;
-        margin-top: 1%;
+        margin-top: 1.2%;
         right: 29%;
+        
+        
     
     }
     
